# personal-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  knowledge_manifest.example.yaml  pyproject.toml  requirements.txt
docs/: architecture.md
scripts/: prepare_knowledge.py
src/agents/: __init__.py  cli.py
src/agents/api/: __init__.py  app.py  dependencies.py  exceptions.py  logging_config.py  middleware.py  models.py
src/agents/api/routers/: __init__.py  dev_assistant.py  health.py  pattern.py  pr_review.py
src/agents/api/templates/: dev_assistant_chat.html  dev_assistant_ingest.html  dev_assistant_knowledge.html
src/agents/core/: __init__.py  base_agent.py  config.py  llm_client.py
src/agents/dev_assistant/: __init__.py  agent.py  knowledge_loader.py  manifest.py  prompts.py  retrieval.py  session_store.py
src/agents/mcp/: __init__.py  azure_devops_client.py  github_client.py
src/agents/pattern/: __init__.py  agent.py
src/agents/pr_review/: __init__.py  agent.py  prompts.py  review_formatter.py
src/agents/rag/: __init__.py  document_loader.py  vector_store.py
tests/: __init__.py  test_agents.py  test_api.py  test_azure_devops_client.py  test_github_client.py  test_llm_client.py
